Início CRUD pessoas

--- a/public/view/about.html
+++ b/public/view/about.html
@@ -1,6 +1,10 @@
-
-	<div class="container" ng-controller="mainController">
-
-<P>Sobre nóis...</P>
-
+<div class="container" ng-controller="mainController">
+	<!-- HEADER  -->
+	<div class="jumbotron text-center">
+		<h1>Sobre Nós</h1>
 	</div>
+
+
+	<P>Sobre nóis...</P>
+
+</div>
