--- a/public/view/home.html
+++ b/public/view/home.html
@@ -2,7 +2,7 @@
 	<div class="container" ng-controller="mainController">
 
 
-		<!-- HEADER AND TODO COUNT -->
+		<!-- HEADER  -->
 		<div class="jumbotron text-center">
 			<h1>Hypatia Home</h1>
 		</div>
